<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/xuhao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/item_height"
        android:layout_weight="0.7"
        android:text="@string/xuhao"
        android:gravity="center"
        android:textColor="@color/text_content_color"
        android:textSize="@dimen/content_text_size"/>

    <TextView
        android:id="@+id/operator_people"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/item_height"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/operator_people"
        android:textColor="@color/text_content_color"
        android:textSize="@dimen/content_text_size"/>

    <TextView
        android:id="@+id/operator_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/item_height"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/operator_time"
        android:textColor="@color/text_content_color"
        android:textSize="@dimen/content_text_size"/>

    <TextView
        android:id="@+id/check_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/item_height"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/check_jieguo"
        android:textColor="@color/text_content_color"
        android:textSize="@dimen/content_text_size"/>

</LinearLayout>