<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginTop="@dimen/marginTop10"
        android:layout_marginBottom="@dimen/marginTop5"
        android:layout_marginLeft="@dimen/marginTop10"
        android:layout_marginRight="@dimen/marginTop10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:layout_marginRight="@dimen/marginTop10"
            android:text="@string/shebei_leibie"
            android:textColor="@color/text_content_color"
            android:textSize="@dimen/content_text_size"/>

        <TextView
            android:id="@+id/device_leibie"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"
            android:layout_weight="3"
            android:background="@drawable/input_bg"
            android:drawablePadding="5dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/shebei_leibie"
            android:lines="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/text_content_color"
            android:textSize="@dimen/content_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginTop="@dimen/marginTop5"
        android:layout_marginBottom="@dimen/marginTop5"
        android:layout_marginLeft="@dimen/marginTop10"
        android:layout_marginRight="@dimen/marginTop10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:layout_marginRight="@dimen/marginTop10"
            android:text="@string/shebei_xinghao"
            android:textColor="@color/text_content_color"
            android:textSize="@dimen/content_text_size"/>

        <TextView
            android:id="@+id/device_xinghao"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"
            android:layout_weight="3"
            android:background="@drawable/input_bg"
            android:drawablePadding="5dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/shebei_xinghao"
            android:lines="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/text_content_color"
            android:textSize="@dimen/content_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginTop="@dimen/marginTop5"
        android:layout_marginBottom="@dimen/marginTop5"
        android:layout_marginLeft="@dimen/marginTop10"
        android:layout_marginRight="@dimen/marginTop10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:layout_marginRight="@dimen/marginTop10"
            android:text="@string/shebei_guige"
            android:textColor="@color/text_content_color"
            android:textSize="@dimen/content_text_size"/>

        <TextView
            android:id="@+id/device_guige"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"
            android:layout_weight="3"
            android:background="@drawable/input_bg"
            android:drawablePadding="5dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/shebei_guige"
            android:lines="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/text_content_color"
            android:textSize="@dimen/content_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginTop="@dimen/marginTop5"
        android:layout_marginBottom="@dimen/marginTop10"
        android:layout_marginLeft="@dimen/marginTop10"
        android:layout_marginRight="@dimen/marginTop10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:layout_marginRight="@dimen/marginTop10"
            android:text="@string/device_id"
            android:textColor="@color/text_content_color"
            android:textSize="@dimen/content_text_size"/>

        <TextView
            android:id="@+id/device_id"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"
            android:layout_weight="3"
            android:background="@drawable/input_bg"
            android:drawablePadding="5dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/device_id"
            android:lines="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/text_content_color"
            android:textSize="@dimen/content_text_size" />

    </LinearLayout>

    <include
        layout="@layout/adapter_record_device_detail" />

</LinearLayout>